@@ -4,6 +4,9 @@ Revision history for Perl extension Module::Build.
 
  Bug fixes:
 
+ - If not set, the 'module_name' is detected from 'dist_version_from'
+   or from 'dist_name'.  The directory is no longer used.
+
  - The 'share_dir' property no longer defaults to 'share' and must be
    explicitly set instead; this fixes problems for CPAN distributions that
    already have a 'share' directory for whatever reason
